unpackaged/main/default/objects/due__Diduenjoy_Answer__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <formula>DATEVALUE(due__Diduenjoy_Feedback__r.due__CreatedAt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>