unpackaged/main/default/objects/due__Diduenjoy_Answer__c/fields/due__Position__c.field-meta.xml
<CustomField>
    <fullName>due__Position__c</fullName>
    <label>Position</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>