unpackaged/main/default/objects/due__Diduenjoy_Answer__c/fields/due__Question__c.field-meta.xml
<CustomField>
    <fullName>due__Question__c</fullName>
    <label>Question</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>