unpackaged/main/default/objects/due__Diduenjoy_Answer__c/fields/due__Question_InternalId__c.field-meta.xml
<CustomField>
    <fullName>due__Question_InternalId__c</fullName>
    <externalId>true</externalId>
    <label>Question Internal ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>