unpackaged/main/default/objects/due__Diduenjoy_Answer__c/fields/due__Question_Type__c.field-meta.xml
<CustomField>
    <fullName>due__Question_Type__c</fullName>
    <label>Question Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>