unpackaged/main/default/objects/due__Diduenjoy_Answer__c/fields/due__Score__c.field-meta.xml
<CustomField>
    <fullName>due__Score__c</fullName>
    <label>Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>