unpackaged/main/default/objects/due__Diduenjoy_Answer__c/fields/due__Step__c.field-meta.xml
<CustomField>
    <fullName>due__Step__c</fullName>
    <description>Step offset</description>
    <label>Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>