unpackaged/main/default/objects/due__Diduenjoy_Answer__c/fields/due__Text_Answer__c.field-meta.xml
<CustomField>
    <fullName>due__Text_Answer__c</fullName>
    <label>Text Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>