unpackaged/main/default/objects/due__Diduenjoy_Answer__c/fields/due__Translated_Question__c.field-meta.xml
<CustomField>
    <fullName>due__Translated_Question__c</fullName>
    <label>Translated Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>